# ccg-agentic-counterfactual

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
data/: README.md
models/: README.md
ns3/: ran-sim 2.cc  ran-sim.cc
scripts/: make_batch_cases.sh  make_intent_example.py  make_intent_pair.py  make_npe_dataset.py  patch_build_ns3.sh  replot_llm_judge.py  replot_llm_judge_sig.py  reproduce_all.sh  run_ns3.sh
src/cfllm/: auto_cf_timeseries.py  calibrate.py  calibrate_clm.py  calibrate_clm_fast.py  config.py  conformal_experiment.py  data_gen_calib.py  dt_env.py  edits.py  env.py  env_bridge.py  eval_cf.py  eval_cf_all.py  eval_cf_compare.py  eval_cf_envseed_fixed.py  eval_cf_multi_fidelity.py  eval_cf_npe.py  eval_cf_npe_fixed.py  eval_cf_twins.py  eval_counterfactual.py  eval_timeseries.py  experiments_conformal.py  freeze_test_presamples.py  gmscm.py  llm.py  llm_judge_eval.py  noise.py  npe_seed.py  plot_cf_from_csv.py  plot_cf_pairs.py  plot_cf_timeseries.py  replot_clm.py  report_utils.py  retest_from_presamples.py  run_conformal_cf_experiments.py  scm.py  scores.py  semantic_compare.py  test_cf.py  test_clm.py  (+2 more)
src/cfllm/plots/: plot_cf_from_csv.py
tests/: test_imports.py
